# mThesis

./: pyproject.toml
Papers/Suggestions/: ~$neral_development_advice.docx
mthesis/: main.py  testing.py
mthesis/data/flickr8k/: ix_to_word_6067.csv  vocab_6067.csv  word_to_ix_6067.csv
mthesis/models/: models.py
mthesis/models/FLICKR8K/: embeddings3cw.pth
mthesis/src/: CGAN.py  FLICKR_CGAN.py  MNIST_CGAN.py  RNN_CGAN.py  RNN_MNIST_CGAN.py  Training.py
mthesis/utils/: utils.py
tests/: test_mthesis.py
