[tool.poetry]
name = "mThesis"
version = "0.1.0"
description = ""
authors = ["Lukewtr <55801206+Lukewtr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.0"
torchvision = "^0.9.0"
numpy = "^1.20.1"
requests = "^2.25.1"
easydict = "^1.9"
python-dateutil = "^2.8.1"
torchfile = "^0.1.0"
nltk = "^3.5"
scikit-image = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
